--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,16 @@ spring.datasource.username=postgres
 #spring.datasource.password=123
 spring.datasource.password=y@suk321
 spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #server.port=8086
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-#system.root-directory=files
-#spring.servlet.multipart.max-file-size=10MB
-#spring.servlet.multipart.max-request-size=10MB
+system.root-directory=files
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
 jwt.secret=AFasfsafa#$%@$@ffgsgq353q53ESF3qr32R
