--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/sinventory
-#Maybe yours localhost:5434
 spring.datasource.username=postgres
-#spring.datasource.password=123
 spring.datasource.password=y@suk321
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #server.port=8086
+
+logging.level.org.springframework.web=DEBUG
+logging.level.com.yourpackage=DEBUG
+
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
