upgraded to 3.0.0 spring boot (WITH A LOT BUGS)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #server.port=8086
 
-logging.level.org.springframework.web=DEBUG
-logging.level.com.yourpackage=DEBUG
+
 
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
@@ -21,4 +20,7 @@ spring.servlet.multipart.max-request-size=10MB
 jwt.secret=AFasfsafa#$%@$@ffgsgq353q53ESF3qr32R
 jwt.jwtExpirationInMs=8640000
 jwt.jwtExpirationInMsRememberMe=604800000
+
+accessTokenKey = delicate
+refreshTokenKey = gorgeous
 
