--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sinventory
 spring.datasource.username=postgres
 spring.datasource.password=y@suk321
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
